--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:url" content="https://www.todaylist.es/">
     <meta property="og:title" content="ToDayList - Simplifica Tu Día, Organiza Tus Tareas">
     <meta property="og:description" content="Organiza tus pendientes con ToDayList: tu gestor de tareas diarias minimalista.">
-    <meta property="og:image" content="https://www.todaylist.es/ToDayList.png">
+    <meta property="og:image" content="https://www.todaylist.es/ToDayList.png"> <!-- Este OG image puede seguir siendo tu PNG grande y original -->
     <meta property="og:site_name" content="ToDayList">
 
     <!-- Twitter -->
@@ -32,9 +32,21 @@
     <meta property="twitter:url" content="https://www.todaylist.es/">
     <meta property="twitter:title" content="ToDayList - Simplifica Tu Día, Organiza Tus Tareas">
     <meta property="twitter:description" content="Organiza tus pendientes con ToDayList: tu gestor de tareas diarias minimalista.">
-    <meta property="twitter:image" content="https://www.todaylist.es/ToDayList.png">
+    <meta property="twitter:image" content="https://www.todaylist.es/ToDayList.png"> <!-- Este Twitter image también puede ser el grande -->
 
-    <link rel="icon" href="https://www.todaylist.es/ToDayList.png" type="image/png">
+    <!-- FAVICONS - Generado por ejemplo con RealFaviconGenerator.net -->
+    <!-- Asegúrate de tener estos archivos en la raíz de tu sitio web (https://www.todaylist.es/) -->
+    <!-- O ajusta las rutas href si están en una subcarpeta -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest"> <!-- O /manifest.json si así lo llamas -->
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2d89ef"> <!-- CAMBIA ESTE COLOR -->
+    <link rel="shortcut icon" href="/favicon.ico">
+    <meta name="msapplication-TileColor" content="#2d89ef"> <!-- CAMBIA ESTE COLOR -->
+    <meta name="msapplication-config" content="/browserconfig.xml"> <!-- Necesitarás crear este archivo también, RealFaviconGenerator lo hace -->
+    <meta name="theme-color" content="#ffffff"> <!-- CAMBIA ESTE COLOR, usualmente el color de fondo de tu app o un color de acento -->
+    <!-- FIN FAVICONS -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,11 +76,11 @@
         "price": "0",
         "priceCurrency": "USD"
       },
-      "image": "https://www.todaylist.es/ToDayList.png",
+      "image": "https://www.todaylist.es/ToDayList.png", /* Este puede ser tu logo principal para el Schema */
       "screenshot": "https://www.todaylist.es/images/todaylist-screenshot.jpg",
-      "softwareVersion": "1.1.0",
-      "datePublished": "2024-03-12",
-      "keywords": "lista de tareas, to-do list, gestor de tareas diarias, productividad, organización, planificación, web app, tareas pendientes, subtareas, prioridades, google drive, google calendar"
+      "softwareVersion": "1.1.1", /* Incrementa la versión si consideras esto un cambio */
+      "datePublished": "2024-03-13", /* Actualiza la fecha */
+      "keywords": "lista de tareas, to-do list, gestor de tareas diarias, productividad, organización, planificación, web app, tareas pendientes, subtareas, prioridades, google drive, google calendar, favicon"
     }
     </script>
 
