--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <!-- <link rel="manifest" href="/site.webmanifest">  <-- ELIMINADO -->
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#e74c3c"> <!-- Color de acento -->
     <link rel="shortcut icon" href="/favicon.ico">
-    <meta name="msapplication-TileColor" content="#e74c3c"> <!-- Color de acento -->
-    <meta name="msapplication-config" content="/browserconfig.xml">
-    <meta name="theme-color" content="#f4f7f6"> <!-- Color de fondo modo claro -->
+    <!-- <meta name="msapplication-TileColor" content="#e74c3c"> <-- ELIMINADO -->
+    <!-- <meta name="msapplication-config" content="/browserconfig.xml"> <-- ELIMINADO -->
+    <!-- <meta name="theme-color" content="#f4f7f6"> <-- ELIMINADO -->
     <!-- FIN FAVICONS -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
