--- a/index.html
+++ b/index.html
@@ -223,9 +223,10 @@
 
     </div> <!-- Fin de .container -->
 
-    <!-- Modal para agendar recordatorio (NUEVO) -->
+    <!-- Modal para agendar recordatorio (MODIFICADO) -->
     <div id="reminder-modal" class="modal-overlay">
         <div class="modal-content">
+            <!-- Botón de cerrar con las mismas clases que el de info-modal -->
             <button class="app-button close-modal" id="close-reminder-modal" aria-label="Cerrar ventana de recordatorio">×</button>
             <h2>Agendar Recordatorio</h2>
             <p id="reminder-task-text"></p> <!-- Para mostrar el nombre de la tarea -->
