--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     </div> <!-- Fin de .container -->
 
-    <!-- Modal para agendar recordatorio (MODIFICADO) -->
+    <!-- Modal para agendar recordatorio (MODIFICADO: Botón de cerrar) -->
     <div id="reminder-modal" class="modal-overlay">
         <div class="modal-content">
             <!-- Botón de cerrar con las mismas clases que el de info-modal -->
