--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">        <!-- Respaldo .ico para navegadores antiguos -->
 
     <!-- Icono para Apple (usará el de mayor resolución disponible si no se especifica uno exacto) -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Si ToDayList-192.png es el que quieres para Apple Touch, puedes añadir: -->
     <!-- <link rel="apple-touch-icon" href="/ToDayList-192.png"> -->
     <!-- Si no, los dispositivos Apple intentarán usar el favicon general o el más grande que encuentren -->
