--- a/index.html
+++ b/index.html
@@ -1625,7 +1625,7 @@
                 <label for="reminder-time">Hora:</label>
                 <input type="time" id="reminder-time" value="09:00" required>
             </div>
-            <button id="schedule-reminder-button" class="app-button">Agendar en Google Calendar</button>
+            <button id="schedule-reminder-button" class="app-button">Mandar a Google Calendar</button>
         </div>
     </div>
 
